--- a/pom.xml
+++ b/pom.xml
@@ -51,12 +51,12 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>3.3.0</version>
+            <version>3.5.2</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
-            <version>1.2.3</version>
+            <version>1.2.5</version>
         </dependency>
 
         <!-- 3.Servlet Web -->
@@ -66,7 +66,7 @@
             <version>1.1.2</version>
         </dependency>
         <dependency>
-            <groupId>jstl</groupId>
+            <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
@@ -83,46 +83,47 @@
 
         <!-- 4.Spring -->
         <!-- 1)Spring 核心 -->
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
         <dependency>
-            <groupId>org.spring.framework</groupId>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>4.1.7.RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>org.spring.framework</groupId>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
             <version>4.1.7.RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>org.spring.framework</groupId>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>4.1.7.RELEASE</version>
         </dependency>
         <!-- 2)Spring DAO -->
         <dependency>
-            <groupId>org.spring.framework</groupId>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
             <version>4.1.7.RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>org.spring.framework</groupId>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
             <version>4.1.7.RELEASE</version>
         </dependency>
         <!-- 3)Spring Web-->
         <dependency>
-            <groupId>org.spring.framework</groupId>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>4.1.7.RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>org.spring.framework</groupId>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>4.1.7.RELEASE</version>
         </dependency>
         <!-- 4)Spring test -->
         <dependency>
-            <groupId>org.spring.framework</groupId>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>4.1.7.RELEASE</version>
         </dependency>
